--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_basketball:
     # Config indicated by + and applies to all files under models/example/
+    materialized: view
     staging:
       +materialized: view
